--- a/lesson-1/index.html
+++ b/lesson-1/index.html
@@ -4,11 +4,10 @@
 	<meta charset="UTF-8">
 	<title>JavaScript Introduction | COMP1073 Client-Side JavaScript</title>
 	<link rel="stylesheet" href="css/styles.css">
-	
 </head>
 <body>
 	<h1>JavaScript Introduction</h1>
-	<p>Hello, <em>teacher Scott</em>. This week's lesson is all about the basics of adding JavaScript to HTML and CSS.</p>
+	<p>Hello, <em>Professor Scott</em>. This week's lesson is all about the basics of adding JavaScript to HTML and CSS.</p>
 	<script>
 		/*
 		STEP 1: What is JavaScript?
